--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- HTML -->
   <!-- Custom Styles -->
   <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Bree+Serif&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css.zip/style.css">
  <!-- <link rel="stylesheet" href="phone.css">-->
   <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
   
