--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Bree+Serif&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 
  <!-- <link rel="stylesheet" href="phone.css">-->
 
