--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         <div class="box">
 
-          <img src="img/logo1.png" alt="Transport">
+          <img src="logo1.png" alt="Transport">
 
           <h3 class="h-secondary center">TRANSPORT</h3>
 
@@ -114,7 +114,7 @@
 
           <div class="box">
 
-           <img src="img/logo2.png" alt="Transport">
+           <img src="logo2.png" alt="Transport">
 
              <h3 class="h-secondary center">24×7 SERVICE</h3>
 
@@ -130,7 +130,7 @@
 
           <div class="box">
 
-            <img src="img/logo3.png" alt="Transport">
+            <img src="logo3.png" alt="Transport">
 
              <h3 class="h-secondary center">LIVE LOCATION</h3>
 
@@ -146,7 +146,7 @@
 
            <div class="box">
 
-            <img src="img/logo4.png" alt="Transport">
+            <img src="logo4.png" alt="Transport">
 
              <h3 class="h-secondary center">InTime Delivery</h3>
 
@@ -162,7 +162,7 @@
 
            <div class="box">
 
-             <img src="img/logo5.png" alt="Transport">
+             <img src="logo5.png" alt="Transport">
 
              <h3 class="h-secondary center">Door-To-Door</h3>
 
@@ -178,7 +178,7 @@
 
             <div class="box">
 
-             <img src="img/logo6.png" alt="Transport">
+             <img src="logo6.png" alt="Transport">
 
               <h3 class="h-secondary center">More Offers</h3>
 
